Bug 153908 - Dragging scrollbars with mouse in relationships window causes content panel moves in oposite direction than expected
Summary: Dragging scrollbars with mouse in relationships window causes content panel m...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Scrollbars Base-UX
  Show dependency treegraph
 
Reported: 2023-03-01 21:26 UTC by jcsanz
Modified: 2023-03-17 16:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
A database to test the bug (11.40 KB, application/vnd.sun.xml.base)
2023-03-01 21:28 UTC, jcsanz
Details
A video showing the bug (485.47 KB, video/mp4)
2023-03-01 21:30 UTC, jcsanz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jcsanz 2023-03-01 21:26:33 UTC
Description:
In the Relationships window if try to move the scroll bar with mouse, if the scroll bar is moved in one direction the content of the window moves in the same direction, i.e. if the scroll bar is moved down the tables in the window move down too while it is expected the tables go up

Steps to Reproduce:
1. Open a database with some tables
2. Select Tools > Relationships in the menu to open the Relationships window
3. Resize the window to show scrollbars and some space to move them
4. Move any scroll bar dragging it with the mouse 

Actual Results:
The content of the windows goes in the same direction that the bar

Expected Results:
The content of the window should go in the oposite direction than the bar


Reproducible: Always


User Profile Reset: No

Additional Info:
All works properly with the wheel of the mouse 
This bug wasn't present in ver 7.5.4.1


Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded Jumbo
Comment 1 jcsanz 2023-03-01 21:28:55 UTC
Created attachment 185678 [details]
A database to test the bug
Comment 2 jcsanz 2023-03-01 21:30:25 UTC
Created attachment 185679 [details]
A video showing the bug
Comment 3 Robert Großkopf 2023-03-10 14:34:13 UTC
Can't see any buggy behavior here with OpenSUSE 15.3 64bit rpm Linux.
Tested with LO 7.5.0.3 and also LO 7.5.1.2
Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 6; OS: Linux 5.3; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded
Comment 4 Stéphane Guillou (stragu) 2023-03-15 21:49:24 UTC
Reproduced in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 44837a12d12be3e525fa48b37c3dd2553cc97d94
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Confirmed that it's a regression, not reproduced in 7.4.6.2
Comment 5 Stéphane Guillou (stragu) 2023-03-15 22:01:54 UTC
bibisected with linux-64-7.5 repo to first bad commit 842a5e704af521cb282236a0fbd49a46e5fe615b which points to core commit:

commit 59a2650101a0ce711151bfd39af1bbb69f71f318
author	Caolán McNamara <caolanm@redhat.com>	Fri Aug 05 15:51:46 2022 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Sat Aug 06 13:07:49 2022 +0200
tdf#117388 use native scrollbar under gtk in database scrolled window
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137879

Caolán, can you please have a look?
Comment 6 Commit Notification 2023-03-16 11:38:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/89657b5309a276f6be59d74651a94132590be028

Resolves: tdf#153908 scrolling relationships moves the wrong direction

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2023-03-16 11:39:27 UTC
fixed in trunk, backport to 7-5 in gerrit
Comment 8 Commit Notification 2023-03-16 20:58:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c11165685aa8d5c53d42272193727b0670819be7

Resolves: tdf#153908 scrolling relationships moves the wrong direction

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Stéphane Guillou (stragu) 2023-03-17 16:20:31 UTC
Thank you Caolán, verified the fix in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 456b02476f2c8f101479db88087d93b2f57bc75e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded