Resolves: tdf#153908 scrolling relationships moves the wrong direction

Change-Id: Ic49e0c167a020269fa7de58ea9e1ece0b66d57ef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148961
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>